# STM32H7_OPCUA_TEST

./: README.md
STM32CubeH7/: CMakeLists.txt  arm-cross.cmake  mk_debug.sh  mk_release.sh
STM32CubeH7/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  freertos_stm32h750.elf  freertos_stm32h750.img  freertos_stm32h750.its  output.map
STM32CubeH7/Drivers/BSP/Components/LAN8720/: PHY_LAN8720.c
STM32CubeH7/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_eth.c
STM32CubeH7/Projects/NUCLEO-H7A3ZI-Q/Applications/FreeRTOS/FreeRTOS_LowPower/EWARM/: Project.ewp
STM32CubeH7/Projects/NUCLEO-H7A3ZI-Q/Applications/FreeRTOS/FreeRTOS_Mutexes/EWARM/: Project.ewp
STM32CubeH7/Projects/NUCLEO-H7A3ZI-Q/Applications/FreeRTOS/FreeRTOS_Semaphore/EWARM/: Project.ewp
STM32CubeH7/Projects/NUCLEO-H7A3ZI-Q/Applications/FreeRTOS/FreeRTOS_ThreadCreation/EWARM/: Project.ewp
STM32CubeH7/Projects/NUCLEO-H7A3ZI-Q/Applications/FreeRTOS/FreeRTOS_Timers/EWARM/: Project.ewp
STM32CubeH7/Projects/STM32H735G-DK/Applications/FreeRTOS/FreeRTOS_Semaphore/EWARM/: Project.ewp
STM32CubeH7/Projects/STM32H735G-DK/Applications/FreeRTOS/FreeRTOS_ThreadCreation/EWARM/: Project.ewp
STM32CubeH7/Projects/STM32H747I-DISCO/Applications/FPU/FPU_Fractal/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Demonstrations/STemWin/MDK-ARM/: STemWin.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Demonstrations/TouchGFX/MDK-ARM/: TouchGFX.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Examples/DCMI/DCMI_CaptureMode/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Examples/DCMI/DCMI_SnapshotMode/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Examples/MDMA/MDMA_DMA2D_Triggering/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Examples/MDMA/MDMA_LinkedList_ColorsComp/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Examples/MDMA/MDMA_RepeatBlock_Rotation/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Examples/MDMA/MDMA_RepeatBlock_ZoomOut/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Templates/BootCM4_CM7/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Templates/BootCM4_CM7Gated/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Templates/BootCM7_CM4Gated/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H747I-DISCO/Templates/BootCM7_CM4Gated_RAM/MDK-ARM/: Project.uvoptx
STM32CubeH7/Projects/STM32H750B-DK/Demonstrations/MenuLauncher/Simulation/: resource.h
STM32CubeH7/Projects/STM32H7B3I-DK/Applications/FreeRTOS/FreeRTOS_LowPower/EWARM/: Project.ewp
STM32CubeH7/Projects/STM32H7B3I-DK/Applications/FreeRTOS/FreeRTOS_Semaphore/EWARM/: Project.ewp
STM32CubeH7/Projects/STM32H7B3I-DK/Applications/FreeRTOS/FreeRTOS_ThreadCreation/EWARM/: Project.ewp
STM32CubeH7/Projects/STM32H7B3I-EVAL/Applications/FreeRTOS/FreeRTOS_Mutexes/EWARM/: Project.ewp
STM32CubeH7/Projects/STM32H7_SOM/Applications/FreeRTOS/freertos_stm32h750/Inc/: FreeRTOSConfig.h  adc_test.h  cmd_env.h  console.h  crc.h  dma_alloc.h  env.h  fatfs.h  ffconf.h  gpio_test.h  gui.h  i2c_drvr.h  i2c_test.h  lcd.h  lcd_test.h  lwipopts.h  main.h  open62541.h  pwm_test.h  reliable_upgrade.h  rtc_test.h  sdram_info.h  sdram_test.h  spi_test.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim_test.h  ts_goodix_drvr.h  uart_drvr.h  uart_test.h  ubifs_test.h  uboot_abi.h  uboot_env.h  usb_host.h  usb_test.h  usbh_conf.h  wdt_test.h
STM32CubeH7/Projects/STM32H7_SOM/Applications/FreeRTOS/freertos_stm32h750/SW4STM32/: startup_stm32h743xx.s
STM32CubeH7/Projects/STM32H7_SOM/Applications/FreeRTOS/freertos_stm32h750/SW4STM32/STM32H750-SOM/: .cproject  .project  STM32H750-SOM.xml  freertos_stm32h750 Run.cfg  freertos_stm32h750_mkimage.sh  freertos_stm32h750_sdram.ld  freertos_stm32h750_sram.ld
STM32CubeH7/Projects/STM32H7_SOM/Applications/FreeRTOS/freertos_stm32h750/Src/: FreeRTOS_CLI.c  adc_test.c  cmd_env.c  console.c  crc32.c  ctask.c  dma_alloc.c  env.c  ethernetif.c  fatfs.c  gpio_test.c  gui.c  i2c_drvr.c  i2c_test.c  lcd.c  main.c  open62541.c  pwm_test.c  reliable_upgrade.c  rtc_test.c  sdram_info.c  sdram_test.c  spi_test.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c  tim_test.c  ts_goodix_drvr.c  uart_drvr.c  uart_test.c  ubifs_test.c  uboot_abi.c  uboot_env.c  usb_host.c  usb_test.c  usbh_conf.c  usbh_platform.c  wdt_test.c
STM32CubeH7/Projects/STM32H7_SOM/Applications/mbedTLS/SSL_Server/Inc/: stm32h7xx_hal_conf.h
STM32CubeH7/Projects/STM32H7_SOM/CubeMX/: stm32h7-som.ioc
STM32CubeH7/Release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  freertos_stm32h750.elf  freertos_stm32h750.img  freertos_stm32h750.its  output.map
u-boot-upstream/: .config  .u-boot-dtb.img.cmd  .u-boot-nodtb.bin.cmd  .u-boot.cmd  .u-boot.img.cmd  .u-boot.lds.cmd  .u-boot.srec.cmd  ACTIVATE.sh  Kconfig  System.map  u-boot-dtb.img  u-boot.cfg  u-boot.cfg.configs  u-boot.dtb  u-boot.lds  u-boot.map  u-boot.srec  u-boot.sym
u-boot-upstream/cmd/: .bdinfo.o.cmd  .blk_common.o.cmd  .blkcache.o.cmd  .boot.o.cmd  .bootm.o.cmd  .built-in.o.cmd  .cache.o.cmd  .clk.o.cmd  .console.o.cmd  .dm.o.cmd  .echo.o.cmd  .elf.o.cmd  .exit.o.cmd  .fat.o.cmd  .fdt.o.cmd  .flash.o.cmd  .gpt.o.cmd  .help.o.cmd  .itest.o.cmd  .load.o.cmd  .mdio.o.cmd  .mem.o.cmd  .mii.o.cmd  .misc.o.cmd  .mmc.o.cmd  .mtd.o.cmd  .net.o.cmd  .nvedit.o.cmd  .pinmux.o.cmd  .sf.o.cmd  .source.o.cmd  .test.o.cmd  .ubi.o.cmd  .ubifs.o.cmd  .version.o.cmd  .ximg.o.cmd  bdinfo.su  cache.su  clk.su  elf.c  (+18 more)
u-boot-upstream/common/: .autoboot.o.cmd  .board_f.o.cmd  .board_info.o.cmd  .board_r.o.cmd  .bootm.o.cmd  .bootm_os.o.cmd  .built-in.o.cmd  .cli.o.cmd  .cli_hush.o.cmd  .cli_readline.o.cmd  .cli_simple.o.cmd  .command.o.cmd  .console.o.cmd  .dlmalloc.o.cmd  .exports.o.cmd  .fdt_support.o.cmd  .flash.o.cmd  .hash.o.cmd  .image-fdt.o.cmd  .image-fit.o.cmd  .image-sig.o.cmd  .image.o.cmd  .iomux.o.cmd  .main.o.cmd  .malloc_simple.o.cmd  .memsize.o.cmd  .miiphyutil.o.cmd  .s_record.o.cmd  .splash.o.cmd  .stdio.o.cmd  .xyzModem.o.cmd  autoboot.su  board_f.c  (+17 more)
(+803 files in other folders)
